fix(pizza): remove annoying gap

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -3,7 +3,6 @@
     border-bottom: 1px solid grey;
     &:last-child {border: none;}
     .img-wrapper {
-        display: inline-block;
         float: left;
         margin: 0 20px 0 0;
     }
@@ -14,7 +13,7 @@
     width: 100vw;
     max-width: 1200px;
     height: 200px;
-    margin: -20px 0 20px 0;
+    margin: 0 0 20px 0;
     img {
         z-index: 0;
         object-fit: cover;
@@ -22,7 +21,7 @@
     }
     h1 {
         position: relative;
-        padding: 0 0 0 12px;;
+        padding: 4px 0 0 12px;
         color: bisque;
         z-index: 1;
         font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
